# library-api-drf

./: .env  README.md  db.sqlite3  main.py  pyproject.toml
config/: settings.py  urls.py
home/: admin.py  exceptions.py  models.py  serializers.py  urls.py  views.py
home/migrations/: 0001_initial.py  0002_alter_book_available_copies.py
